--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -28,6 +28,12 @@
         <p>Veja os candidatos inscritos nos vestibulares.</p>
         <p><a class="btn btn-default" href="{% url 'lista_canditatos' %}">Acessar &raquo;</a></p>
     </div>
+    
+    <div class="col-md-4">
+        <h2>Local da Prova</h2>
+        <p>Veja o Local da prova.</p>
+        <p><a class="btn btn-default" href="{% url 'lista_provas' %}">Acessar &raquo;</a></p>
+    </div>
 </div>
 
 {% endblock %}
